--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,9 @@
             ],
             "styles": [
               "src/styles.css",
-              "src/assets/plugins/bootstrap/css/bootstrap.min.css"
+              "src/assets/plugins/bootstrap/css/bootstrap.min.css",
+              "./node_modules/froala-editor/css/froala_editor.pkgd.min.css",
+               "./node_modules/froala-editor/css/froala_style.min.css"
               
             ],
             "scripts": [
@@ -41,7 +43,11 @@
                "src/assets/plugins/styleswitcher/jQuery.style.switcher.js",
                "src/assets/plugins/sticky-kit-master/dist/sticky-kit.min.js",
                "src/assets/plugins/sparkline/jquery.sparkline.min.js",       
-               "src/assets/js/custom.js"
+               "src/assets/js/custom.js",
+               "./node_modules/froala-editor/js/froala_editor.pkgd.min.js",
+               "src/assets/plugins/Magnific-Popup-master/dist/jquery.magnific-popup.min.js",
+               "src/assets/plugins/Magnific-Popup-master/dist/jquery.magnific-popup-init.js"
+               
             ]
             
           },
