--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "angular-froala-wysiwyg": "^3.1.0",
     "rxjs": "~6.4.0",
+    "sweetalert2": "^9.9.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
