--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "angular-froala-wysiwyg": "^3.1.0",
     "rxjs": "~6.4.0",
     "sweetalert2": "^9.9.0",
+    "timeago.js": "^4.0.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
