--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@auth0/angular-jwt": "^4.0.0",
     "angular-froala-wysiwyg": "^3.1.0",
     "rxjs": "~6.4.0",
     "sweetalert2": "^9.9.0",
